fix exception handlers for visitors and improve environment